--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-spinner *ngIf="loading" color="#ff1a1a" class="spinner"></app-spinner>
+<app-spinner *ngIf="loading" color="#5552ff" class="spinner"></app-spinner>
 <router-outlet></router-outlet>
