--- a/src/app/home/welcome/welcome.component.html
+++ b/src/app/home/welcome/welcome.component.html
@@ -7,7 +7,7 @@
       <div class="text">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, vel.
       </div>
-      <button mat-flat-button color="accent" 
+      <button mat-flat-button color="accent"
               routerLinkActive='active'
               [routerLinkActiveOptions]="{ exact: true }"
               routerLink='/movies'>Explore</button>
@@ -28,8 +28,8 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p>
       </div>
       <div>
-        <i class="fas fa-person-booth fa-3x"></i>
-        <h3>Actors</h3>
+        <i class="fas fa-laptop fa-3x"></i>
+        <h3>Everywhere</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p>
       </div>
     </div>
@@ -54,6 +54,6 @@
 
   <footer class="center bg-dark">
     <p class="footer-links">
-      <a target="_blank" href="https://github.com/sakmanal">Athanasios Manalikadis </a>&copy; 2019
+      <a target="_blank" href="https://github.com/sakmanal">Athanasios Manalikadis <i class="fab fa-github"></i></a> - 😎 2020
     </p>
   </footer>
