--- a/src/app/home/welcome/welcome.component.css
+++ b/src/app/home/welcome/welcome.component.css
@@ -10,7 +10,7 @@
     filter: blur(10px);
     -webkit-filter: blur(10px);
   }
-  
+
 
   .content {
     position: absolute;
@@ -21,14 +21,22 @@
     margin-left: -145px;
     width: 300px;
     height: 350px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: stretch;
     text-align: center;
   }
-  
+
+  .logo {
+    margin-left: 60px;
+  }
+
   .content .logo {
     height: 180px;
     width: 180px;
   }
-  
+
   .content .title {
     font-size: 2.2rem;
     margin-top: 1rem;
@@ -37,7 +45,7 @@
   .mv{
     font-family: 'Poller One', cursive;
   }
-  
+
   .content .text {
     line-height: 1.7;
     margin-top: 1rem;
@@ -46,45 +54,45 @@
   .content button{
     margin-top: 1rem;
   }
-  
+
   .container {
     max-width: 960px;
     margin: auto;
     overflow: hidden;
     padding: 4rem 1rem;
   }
-  
+
   .grid-3 {
     display: grid;
     grid-gap: 20px;
     grid-template-columns: repeat(3, 1fr);
   }
-  
+
   .grid-2 {
     display: grid;
     grid-gap: 20px;
     grid-template-columns: repeat(2, 1fr);
   }
-  
+
   .center {
     text-align: center;
     margin: auto;
   }
-  
+
   .bg-light {
     background: #f4f4f4;
     color: #333;
   }
-  
+
   .bg-dark {
     background: #333;
     color: #f4f4f4;
   }
-  
+
   footer {
     padding: 2.2rem;
   }
-  
+
   footer p {
     margin: 0;
   }
@@ -98,52 +106,55 @@
   .footer-links a:visited{
     color: rgb(255, 255, 255);
  }
- 
+
  .footer-links a:hover {
      color: #6C63FF;
      text-decoration:none;
    }
-  
+
   /* Small Screens */
   @media (max-width: 560px) {
     .showcase::after {
       height: 50vh;
     }
-  
+
     .content {
       top: 5%;
       margin-top: 5px;
     }
-  
+
+    .logo {
+      margin-left: 80px;
+    }
+
     .content .logo {
       height: 140px;
       width: 140px;
     }
-  
+
     .content .text {
       display: none;
     }
-  
+
     .grid-3,
     .grid-2 {
       grid-template-columns: 1fr;
     }
-  
+
     .services div {
       border-bottom: #333 dashed 1px;
       padding: 1.2rem 1rem;
     }
   }
-  
+
   /* Landscape */
   @media (max-height: 500px) {
     .content .title,
     .content .text {
       display: none;
     }
-  
+
     .content {
       top: 0;
     }
   }
-  
