--- a/src/app/movie/display/movie-select.component.scss
+++ b/src/app/movie/display/movie-select.component.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,700,800');
 
-header {
+.header {
   position: relative;
   max-width: 100%;
   display: block;
