add play button inside hover

--- a/src/app/movie/movie-detail/movie-detail.component.html
+++ b/src/app/movie/movie-detail/movie-detail.component.html
@@ -1,6 +1,7 @@
 ﻿<div class="container">
-  <div>
+  <div class="img-container">
     <img [src]="movie.imageurl" />
+    <button class="btn"><i class="fas fa-play-circle fa-3x"></i></button>
   </div>
   <div class="card">
     <mat-card>
