--- a/src/app/movie/display/movie-select.component.scss
+++ b/src/app/movie/display/movie-select.component.scss
@@ -9,7 +9,7 @@
   border: 1px solid transparent;
   box-shadow: 0 10px 20px rgba(0,0,0,0.80), 0 6px 6px rgba(0,0,0,0.50);
   border-radius: 5px;
-  padding: 15px;
+  padding: 5px 15px;
   margin: 3px 0;
 }
 
@@ -18,6 +18,9 @@
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  .select, .search {
+    margin: 5px;
+  }
 }
 
 .pageTitle {
@@ -43,7 +46,6 @@
   }
 }
 
-
 .color {
   color: #5552ff;
 }
@@ -57,9 +59,6 @@
   .flex-container {
     justify-content: center;
     align-items: center;
-  }
-  .search {
-    margin-top: 10px;
   }
 }
 
