--- a/src/app/shared/components/search/search.component.scss
+++ b/src/app/shared/components/search/search.component.scss
@@ -1,15 +1,13 @@
-@import url('https://fonts.googleapis.com/css?family=Inconsolata:700');
-
 .container {
   input {
-    font-family: 'Inconsolata', monospace;
-    height: 50px;
+    font-family: monospace;
+    height: 3.3em;
     outline: none;
     border: none;
-    background: rgb(109, 102, 104);
+    background: #5c6664;
     color: white;
     padding: 0 80px 0 20px;
-    border-radius: 30px;
+    border-radius: .25em;
     opacity: 1;
     z-index: 5;
     font-weight: bolder;
@@ -20,7 +18,7 @@
     }
     &::placeholder {
       color: white;
-      opacity: 0.5;
+      opacity: 0.7;
       font-weight: bolder;
     }
   }
