--- a/src/app/shared/components/movie-card/movie-card.component.html
+++ b/src/app/shared/components/movie-card/movie-card.component.html
@@ -21,7 +21,7 @@
           <i class="fas fa-info-circle"></i>
           Details
         </button>
-        <button mat-raised-button color="accent" style="margin-left:5px">
+        <button mat-raised-button color="accent" style="margin-left:5px" [routerLink]="['/play', movie.ytId]">
               <i class="fas fa-play-circle fa-2x"></i>
               <span style="font-size: large; margin-left: 10px;">Play</span>
         </button>
