--- a/src/app/shared/components/search/search.component.html
+++ b/src/app/shared/components/search/search.component.html
@@ -1,4 +1,5 @@
 <div class="container">
-  <input type="text" placeholder="Search..." [(ngModel)]="search">
+  <input type="text" [placeholder]="placeholder" [formControl]="searchField">
+  <i class="far fa-times-circle fa-2x clear" (click)="clear()" *ngIf="searchField.value"></i>
 </div>
 
