--- a/src/app/shared/components/search/search.component.scss
+++ b/src/app/shared/components/search/search.component.scss
@@ -10,7 +10,6 @@
     border-radius: .25em;
     opacity: 1;
     z-index: 5;
-    font-weight: bolder;
     letter-spacing: 0.1em;
     cursor: text;
     &:hover {
@@ -19,7 +18,15 @@
     &::placeholder {
       color: white;
       opacity: 0.7;
-      font-weight: bolder;
     }
+
   }
+}
+
+.clear {
+  color: rgb(212, 69, 69);
+  margin-left: -40px;
+  margin-top: 9px;
+  position: absolute;
+  cursor: pointer;
 }
