--- a/src/app/player/video-player/video-player.component.css
+++ b/src/app/player/video-player/video-player.component.css
@@ -1,5 +1,18 @@
+.wrapper {
+  height: 100%;
+  background-color: black;
+}
 
+.time-slider {
+  width: 100% !important;
+}
 
-  .time-slider {
-    width: 100% !important;
-  }
+button {
+  width: 100px;
+}
+
+.controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
