add scroll-top button

--- a/src/app/movie/components/display/movie-select.component.html
+++ b/src/app/movie/components/display/movie-select.component.html
@@ -55,4 +55,6 @@
       *ngIf="displayView === 'grid'"
     ></app-movie-grid>
   </ng-container>
+  <div *ngIf="!load && filteredMovies.length === 0" class="notfound">No movies found.</div>
 </div>
+<app-scroll-top></app-scroll-top>
