add watchList button,Service

--- a/src/app/home/menu/menu.component.html
+++ b/src/app/home/menu/menu.component.html
@@ -20,10 +20,17 @@
         <button mat-button
             routerLinkActive='active'
             [routerLinkActiveOptions]="{ exact: true }"
+            routerLink='/movies/myList'>
+            <i class="fas fa-person-booth"></i>
+            My List
+        </button>
+        <!-- <button mat-button
+            routerLinkActive='active'
+            [routerLinkActiveOptions]="{ exact: true }"
             [routerLink]="['/movies', 0, 'edit']">
             <i class="fas fa-plus"></i>
             Add Movie
-        </button>
+        </button> -->
     </span>
 
 
