--- a/src/app/movie/components/movie-detail/movie-detail.component.html
+++ b/src/app/movie/components/movie-detail/movie-detail.component.html
@@ -53,8 +53,8 @@
       </p>
       <button
         mat-raised-button
-        color="primary"
-        style="margin-right: 5px"
+        color="warn"
+        style="margin: 5px"
         (click)="onBack()"
       >
         <i class="fa fa-chevron-left"></i>
@@ -64,11 +64,13 @@
            color="warn"
            [routerLink]="['/movies', movie.id, 'edit']">
        Edit
-    </button> -->
-      <button mat-raised-button color="accent" style="margin-left: 5px" [routerLink]="['/play', movie.ytId]">
+      </button> -->
+      <app-my-list-button style="margin: 5px"></app-my-list-button>
+      <button mat-raised-button color="accent" style="margin: 5px" [routerLink]="['/play', movie.ytId]">
         <i class="fas fa-play-circle fa-2x"></i>
         <span style="font-size: large; margin-left: 10px">Play</span>
       </button>
+
     </mat-card>
   </div>
 </div>
