--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -2,19 +2,21 @@
 @import '~@angular/material/theming';
 @include mat-core();
 
-$my-app-primary: mat-palette($mat-lime);
+$my-app-primary: mat-palette($mat-teal);
 $my-app-accent:  mat-palette($mat-red, 800);
 $my-app-warn:    mat-palette($mat-deep-purple, 500);
 $my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
 
 @include angular-material-theme($my-app-theme);
 
-.alternate-theme {
-  $alternate-primary: mat-palette($mat-grey, 900);
-  $alternate-accent:  mat-palette($mat-yellow, 400);
-  $alternate-theme: mat-light-theme($alternate-primary, $alternate-accent);
+$alternate-primary: mat-palette($mat-grey, 900);
+$alternate-accent:  mat-palette($mat-teal, 800);
+$alternate-warn:  mat-palette($mat-teal);
+$alternate-theme: mat-light-theme($alternate-primary, $alternate-accent, $alternate-warn);
 
+.alternate-theme {
   @include mat-toolbar-theme($alternate-theme);
+  @include mat-button-theme($alternate-theme);
 }
 
 
