fix bugs on watchlist service

--- a/src/app/movie/components/watchlist/watchlist.component.html
+++ b/src/app/movie/components/watchlist/watchlist.component.html
@@ -13,7 +13,7 @@
         ></app-poster>
       </ng-container>
 
-      <div class="notfound" *ngIf="!myMovies.length || !myMovies">You have not added any movie yet !</div>
+      <div class="notfound" *ngIf="(!myMovies.length || !myMovies) && !load">You have not added any movie yet !</div>
     </ng-container>
   </div>
 
