add error handling on movie resolver

--- a/src/app/movie/components/movie-detail/movie-detail.component.html
+++ b/src/app/movie/components/movie-detail/movie-detail.component.html
@@ -1,4 +1,4 @@
-﻿<div class="container">
+﻿<div class="container" *ngIf="movie">
   <div class="img-container">
     <img [src]="movie.imageurl" />
     <button class="btn"><i class="fas fa-play-circle fa-3x" [routerLink]="['/play', movie.ytId]"></i></button>
