--- a/src/app/home/menu/menu.component.html
+++ b/src/app/home/menu/menu.component.html
@@ -33,13 +33,6 @@
             <i class="fas fa-user-shield"></i>
             Admin Panel
         </button>
-        <!-- <button mat-button
-            routerLinkActive='active'
-            [routerLinkActiveOptions]="{ exact: true }"
-            [routerLink]="['/movies', 0, 'edit']">
-            <i class="fas fa-plus"></i>
-            Add Movie
-        </button> -->
     </span>
 
 
@@ -81,13 +74,13 @@
                         <i class="fas fa-search"></i>
                         <span class="menu-item">Advanced Search</span>
                 </button>
-                <!-- <button mat-menu-item
+                <button mat-menu-item
                         routerLinkActive='active'
                         [routerLinkActiveOptions]="{ exact: true }"
-                        [routerLink]="['/movies', 0, 'edit']">
-                        <i class="fas fa-plus"></i>
-                        <span class="menu-item">Add Movie</span>
-                </button> -->
+                        routerLink='/movies/myList'>
+                        <i class="fas fa-person-booth"></i>
+                        <span class="menu-item">My List</span>
+                </button>
         </span>
         <a target="_blank" class="git-btn" href="https://github.com/sakmanal">
             <button mat-menu-item>
