--- a/src/app/shared/components/movie-card/movie-card.component.html
+++ b/src/app/shared/components/movie-card/movie-card.component.html
@@ -17,7 +17,7 @@
       </p>
     </div>
     <div class="movie_social">
-        <button mat-raised-button color="warn" style="margin:2px" [routerLink]="['/movies', movie.id]">
+        <button mat-raised-button color="warn" style="margin:2px" [routerLink]="['/movies', movie.id, { backurl: 'movies' }]">
           <i class="fas fa-info-circle"></i>
           Details
         </button>
